# sonic-platform-vm-config

./: Makefile.am  README.md  configure.ac  package.cfg
cfg/network/interfaces.d/: eth0
cfg/udev/rules.d/: 80-dn-virt-intf.rules
debian/: changelog  control
